--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -5,25 +5,28 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/white_smoke"
-	tools:context=".ui.view.activity.MainActivity">
+	tools:context=".ui.auth.AuthActivity">
 
 	<androidx.fragment.app.FragmentContainerView
-		android:id="@+id/main_fragment_container_view"
-		android:name="com.alidevs.traill.ui.view.fragment.NavBarFragment"
+		android:id="@+id/auth_fragment_container"
+		android:name="com.alidevs.traill.ui.auth.RegisterFragment"
 		android:layout_width="0dp"
-		android:layout_height="70dp"
+		android:layout_height="0dp"
+		android:layout_margin="10dp"
+		android:background="@drawable/auth_card_shape"
+		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent" />
 
-	<TextView
-		android:id="@+id/mainActivityEmailTextView"
+	<ProgressBar
+		android:id="@+id/progressBar"
+		style="?android:attr/progressBarStyle"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:text="TextView"
-		android:textColor="@color/black"
+		android:visibility="gone"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/main_fragment_container_view" />
+		app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
