--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,12 +2,12 @@
 	<!-- Base application theme. -->
 	<style name="Theme.Traill" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
 		<!-- Primary brand color. -->
-		<item name="colorPrimary">@color/purple_200</item>
-		<item name="colorPrimaryVariant">@color/purple_700</item>
+		<item name="colorPrimary">@color/ebony_clay</item>
+		<item name="colorPrimaryVariant">@color/saffron_mango</item>
 		<item name="colorOnPrimary">@color/black</item>
 		<!-- Secondary brand color. -->
-		<item name="colorSecondary">@color/teal_200</item>
-		<item name="colorSecondaryVariant">@color/teal_200</item>
+		<item name="colorSecondary">@color/battleship_grey</item>
+		<item name="colorSecondaryVariant">@color/ebony_clay</item>
 		<item name="colorOnSecondary">@color/black</item>
 		<!-- Status bar color. -->
 		<item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
