--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,10 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-	<color name="purple_200">#FFBB86FC</color>
-	<color name="purple_500">#FF6200EE</color>
-	<color name="purple_700">#FF3700B3</color>
-	<color name="teal_200">#FF03DAC5</color>
-	<color name="teal_700">#FF018786</color>
+	<color name="white_smoke">#F6F6F6</color>
+	<color name="ebony_clay">#1F2C3C</color>
+	<color name="saffron_mango">#FFC069</color>
+	<color name="battleship_grey">#828282</color>
+	<color name="dawn_pink">#EBEBEB</color>
+	<color name="iron">#D8D8D8</color>
+
+	<color name="blue_romance">#D9F3E2</color>
+	<color name="carousel_pink">#F5DCF0</color>
+
 	<color name="black">#FF000000</color>
 	<color name="white">#FFFFFFFF</color>
 </resources>
