--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,16 +1,28 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
 	<!-- Base application theme. -->
-	<style name="Theme.Traill" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+	<style name="Theme.Traill" parent="carbon_Theme.Light.NoActionBar">
 		<!-- Primary brand color. -->
-		<item name="colorPrimary">@color/purple_500</item>
-		<item name="colorPrimaryVariant">@color/purple_700</item>
+		<item name="colorPrimary">@color/ebony_clay</item>
+		<item name="colorPrimaryVariant">@color/saffron_mango</item>
 		<item name="colorOnPrimary">@color/white</item>
 		<!-- Secondary brand color. -->
-		<item name="colorSecondary">@color/teal_200</item>
-		<item name="colorSecondaryVariant">@color/teal_700</item>
+		<item name="colorSecondary">@color/battleship_grey</item>
+		<item name="colorSecondaryVariant">@color/ebony_clay</item>
 		<item name="colorOnSecondary">@color/black</item>
 		<!-- Status bar color. -->
 		<item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
-		<!-- Customize your theme here. -->
 	</style>
+
+	<style name="auth_style" parent="Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense">
+		<item name="boxStrokeColor">?colorOnSurface</item>
+		<item name="strokeWidth">0.25dp</item>
+		<item name="boxBackgroundColor">@color/white_smoke</item>
+	</style>
+
+	<style name="HorizontalLine">
+		<item name="android:layout_width">fill_parent</item>
+		<item name="android:layout_height">0.6dp</item>
+		<item name="android:background">@color/battleship_grey</item>
+	</style>
+
 </resources>
