--- a/app/src/main/res/drawable/nav_menu_button_selector.xml
+++ b/app/src/main/res/drawable/nav_menu_button_selector.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android" android:enterFadeDuration="100" android:exitFadeDuration="100">
+<selector xmlns:android="http://schemas.android.com/apk/res/android"
+	android:enterFadeDuration="50"
+	android:exitFadeDuration="50">
 	<item android:drawable="@drawable/nav_menu_button_pressed_shape" android:state_pressed="true" />
 	<item android:drawable="@drawable/nav_menu_button_active_shape" />
 </selector>
