--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -5,11 +5,11 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/white_smoke"
-	tools:context=".ui.auth.AuthActivity">
+	tools:context=".ui.view.auth.AuthActivity">
 
 	<androidx.fragment.app.FragmentContainerView
 		android:id="@+id/auth_fragment_container"
-		android:name="com.alidevs.traill.ui.auth.RegisterFragment"
+		android:name="com.alidevs.traill.ui.view.auth.fragment.RegisterFragment"
 		android:layout_width="0dp"
 		android:layout_height="0dp"
 		android:layout_margin="10dp"
