--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,29 +1,48 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
+	android:id="@+id/drawer_layout"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/white_smoke"
-	tools:context=".ui.view.activity.MainActivity">
+	tools:context=".ui.view.home.MainActivity">
 
-	<androidx.fragment.app.FragmentContainerView
-		android:id="@+id/main_fragment_container_view"
-		android:name="com.alidevs.traill.ui.view.fragment.NavBarFragment"
-		android:layout_width="0dp"
-		android:layout_height="70dp"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent" />
+	<androidx.constraintlayout.widget.ConstraintLayout
+		android:layout_width="match_parent"
+		android:layout_height="match_parent">
 
-	<TextView
-		android:id="@+id/mainActivityEmailTextView"
+		<androidx.fragment.app.FragmentContainerView
+			android:id="@+id/main_nav_fragment_container"
+			android:name="com.alidevs.traill.ui.view.home.fragment.NavBarFragment"
+			android:layout_width="0dp"
+			android:layout_height="70dp"
+			android:minHeight="?actionBarSize"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent" />
+
+		<androidx.fragment.app.FragmentContainerView
+			android:id="@+id/main_fragment_container"
+			android:name="com.alidevs.traill.ui.view.home.fragment.HomeFragment"
+			android:layout_width="0dp"
+			android:layout_height="0dp"
+			app:layout_constraintBottom_toBottomOf="parent"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/main_nav_fragment_container" />
+
+	</androidx.constraintlayout.widget.ConstraintLayout>
+
+	<com.google.android.material.navigation.NavigationView
+		android:id="@+id/navigation_view"
 		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:text="TextView"
-		android:textColor="@color/black"
-		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/main_fragment_container_view" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+		android:layout_height="match_parent"
+		android:layout_gravity="start"
+		android:background="@color/white"
+		android:fitsSystemWindows="true"
+		app:headerLayout="@layout/nav_header"
+		app:itemTextAppearance="@style/NavItems"
+		app:itemIconTint="@color/ebony_clay"
+		app:menu="@menu/main_menu" />
+</androidx.drawerlayout.widget.DrawerLayout>
