--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,7 +6,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/white"
-	tools:context=".ui.auth.LoginFragment">
+	tools:context=".ui.view.auth.fragment.LoginFragment">
 
 	<ImageView
 		android:id="@+id/imageView"
@@ -50,6 +50,7 @@
 		<com.google.android.material.textfield.TextInputEditText
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:inputType="textEmailAddress"
 			android:textSize="14sp" />
 	</com.google.android.material.textfield.TextInputLayout>
 
@@ -71,6 +72,7 @@
 		<com.google.android.material.textfield.TextInputEditText
 			android:layout_width="match_parent"
 			android:layout_height="wrap_content"
+			android:inputType="textPassword"
 			android:textSize="14sp" />
 	</com.google.android.material.textfield.TextInputLayout>
 
