--- a/app/src/main/res/layout/fragment_nearby_rides.xml
+++ b/app/src/main/res/layout/fragment_nearby_rides.xml
@@ -2,40 +2,35 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:id="@+id/navBar"
+	android:id="@+id/frameLayout4"
 	android:layout_width="match_parent"
-	android:layout_height="match_parent">
+	android:layout_height="match_parent"
+	tools:context=".ui.view.home.fragment.NearbyRidesFragment">
 
 	<TextView
-		android:id="@+id/nav_title"
+		android:id="@+id/textView4"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:fontFamily="@font/lexend_font"
-		android:text="Home"
+		android:text="Nearby rides"
 		android:textAllCaps="true"
-		android:textColor="@color/black"
+		android:textColor="@color/battleship_grey"
 		android:textFontWeight="500"
-		app:layout_constraintBottom_toBottomOf="parent"
+		android:textSize="12sp"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent" />
 
-	<ImageButton
-		android:id="@+id/nav_hamburger_menu_button"
-		android:layout_width="wrap_content"
+	<androidx.recyclerview.widget.RecyclerView
+		android:id="@+id/nearby_rides_recyclerView"
+		android:layout_width="0dp"
 		android:layout_height="wrap_content"
-		android:layout_marginStart="20dp"
-		android:background="@drawable/nav_menu_button_selector"
-		android:clickable="true"
-		android:elevation="3dp"
-		android:focusable="true"
-		android:minWidth="34dp"
-		android:minHeight="34dp"
-		android:src="@drawable/ic_hamburger_menu_icon"
+		android:layout_marginTop="10dp"
+		android:layout_marginBottom="10dp"
+		app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
 		app:layout_constraintBottom_toBottomOf="parent"
-		app:layout_constraintEnd_toStartOf="@+id/nav_title"
-		app:layout_constraintHorizontal_bias="0.0"
+		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toTopOf="parent"
-		tools:ignore="SpeakableTextPresentCheck" />
+		app:layout_constraintTop_toBottomOf="@id/textView4"
+		app:layout_constraintVertical_bias="0.0" />
 </androidx.constraintlayout.widget.ConstraintLayout>
