Maps activity with placing the marker has been completed

--- a/app/src/main/res/layout/fragment_nav_bar.xml
+++ b/app/src/main/res/layout/fragment_nav_bar.xml
@@ -29,6 +29,7 @@
 		android:clickable="true"
 		android:elevation="3dp"
 		android:focusable="true"
+		android:foreground="?selectableItemBackground"
 		android:minWidth="34dp"
 		android:minHeight="34dp"
 		android:src="@drawable/ic_hamburger_menu_icon"
