--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -16,12 +16,13 @@
 			android:title="Map" />
 	</group>
 
-	<item android:title="Sub items">
+	<item android:title="Driver">
 		<menu>
 			<group android:checkableBehavior="single">
 				<item
-					android:id="@+id/menu_item_4"
-					android:title="First sub" />
+					android:id="@+id/driver_dashboard_item"
+					android:icon="@drawable/ic_driver_icon"
+					android:title="Driver Dashboard" />
 				<item
 					android:id="@+id/menu_item_5"
 					android:title="Second sub" />
