--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -86,7 +86,7 @@
 		app:layout_constraintStart_toStartOf="parent">
 
 		<androidx.appcompat.widget.AppCompatButton
-			android:id="@+id/button2"
+			android:id="@+id/confirmLocationButton"
 			android:layout_width="0dp"
 			android:layout_height="wrap_content"
 			android:layout_marginTop="0dp"
