--- a/app/src/main/res/layout/fragment_request_ride.xml
+++ b/app/src/main/res/layout/fragment_request_ride.xml
@@ -67,12 +67,12 @@
 				android:text="Current Location"
 				android:textColor="@color/battleship_grey"
 				android:textSize="14sp"
-				app:layout_constraintBottom_toTopOf="@+id/textView6"
-				app:layout_constraintStart_toStartOf="@+id/textView6"
+				app:layout_constraintBottom_toTopOf="@+id/current_location_address_textView"
+				app:layout_constraintStart_toStartOf="@+id/current_location_address_textView"
 				app:layout_constraintTop_toTopOf="parent" />
 
 			<TextView
-				android:id="@+id/textView6"
+				android:id="@+id/current_location_address_textView"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_marginStart="16dp"
@@ -123,19 +123,19 @@
 				app:tint="@color/saffron_mango" />
 
 			<TextView
-				android:id="@+id/textView7"
+				android:id="@+id/dstnTV"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:fontFamily="@font/lexend_font"
 				android:text="Destination"
 				android:textColor="@color/battleship_grey"
 				android:textSize="14sp"
-				app:layout_constraintBottom_toTopOf="@+id/textView8"
-				app:layout_constraintStart_toStartOf="@+id/textView8"
+				app:layout_constraintBottom_toTopOf="@+id/destination_location_address_textView"
+				app:layout_constraintStart_toStartOf="@+id/destination_location_address_textView"
 				app:layout_constraintTop_toTopOf="parent" />
 
 			<TextView
-				android:id="@+id/textView8"
+				android:id="@+id/destination_location_address_textView"
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:layout_marginStart="16dp"
@@ -145,7 +145,7 @@
 				android:textSize="14sp"
 				app:layout_constraintBottom_toBottomOf="parent"
 				app:layout_constraintStart_toEndOf="@+id/imageView3"
-				app:layout_constraintTop_toBottomOf="@+id/textView7" />
+				app:layout_constraintTop_toBottomOf="@+id/dstnTV" />
 		</androidx.constraintlayout.widget.ConstraintLayout>
 	</androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
