The application now gets your current location and allows you to drop a pin to select your destination

--- a/app/src/main/res/layout/fragment_request_ride.xml
+++ b/app/src/main/res/layout/fragment_request_ride.xml
@@ -77,7 +77,7 @@
 				android:layout_height="wrap_content"
 				android:layout_marginStart="16dp"
 				android:fontFamily="@font/lexend_font"
-				android:text="Imam Abdulrahman bin Faisal University"
+				android:text="N/A"
 				android:textColor="@color/ebony_clay"
 				android:textSize="14sp"
 				app:layout_constraintBottom_toBottomOf="parent"
@@ -140,7 +140,7 @@
 				android:layout_height="wrap_content"
 				android:layout_marginStart="16dp"
 				android:fontFamily="@font/lexend_font"
-				android:text="East Al Khobar"
+				android:text="N/A"
 				android:textColor="@color/ebony_clay"
 				android:textSize="14sp"
 				app:layout_constraintBottom_toBottomOf="parent"
