--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -34,34 +34,6 @@
 		app:layout_constraintTop_toTopOf="parent"
 		tools:ignore="SpeakableTextPresentCheck" />
 
-	<androidx.constraintlayout.widget.ConstraintLayout
-		android:id="@+id/location_details_constraintLayout"
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-		android:layout_margin="16dp"
-		android:background="@drawable/main_card_shape"
-		android:elevation="4dp"
-		android:padding="8dp"
-		android:visibility="gone"
-		app:layout_constraintBottom_toBottomOf="@+id/maps_back_button"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toEndOf="@+id/maps_back_button"
-		app:layout_constraintTop_toTopOf="@+id/maps_back_button">
-
-		<TextView
-			android:id="@+id/current_location_textView"
-			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:fontFamily="@font/lexend_font"
-			android:text="TextView"
-			android:textColor="@color/ebony_clay"
-			android:textSize="10sp"
-			app:layout_constraintBottom_toBottomOf="parent"
-			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent" />
-	</androidx.constraintlayout.widget.ConstraintLayout>
-
 	<ProgressBar
 		android:id="@+id/progressBar2"
 		style="?android:attr/progressBarStyle"
@@ -80,27 +52,195 @@
 		android:layout_margin="16dp"
 		android:background="@drawable/main_card_shape"
 		android:elevation="4dp"
-		android:padding="8dp"
+		android:padding="10dp"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent">
 
+		<LinearLayout
+			android:id="@+id/linearLayout3"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:orientation="horizontal"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toTopOf="parent">
+
+			<TextView
+				android:id="@+id/distanceTextView"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_weight="0.75"
+				android:fontFamily="@font/lexend_font"
+				android:gravity="center"
+				android:text="TextView"
+				android:textColor="@color/battleship_grey"
+				android:textSize="13sp" />
+
+			<TextView
+				android:id="@+id/textView6"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_weight="0.25"
+				android:fontFamily="@font/lexend_font"
+				android:gravity="center"
+				android:text="•"
+				android:textColor="@color/battleship_grey"
+				android:textSize="13sp" />
+
+			<TextView
+				android:id="@+id/estimatePriceTextView"
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_weight="0.75"
+				android:fontFamily="@font/lexend_font"
+				android:gravity="center"
+				android:text="TextView"
+				android:textColor="@color/battleship_grey"
+				android:textSize="13sp" />
+		</LinearLayout>
+
+		<androidx.constraintlayout.widget.ConstraintLayout
+			android:id="@+id/constraintLayout"
+			android:layout_width="0dp"
+			android:layout_height="wrap_content"
+			android:layout_marginTop="24dp"
+			android:layout_marginBottom="24dp"
+			app:layout_constraintBottom_toTopOf="@+id/confirmLocationButton"
+			app:layout_constraintEnd_toEndOf="parent"
+			app:layout_constraintStart_toStartOf="parent"
+			app:layout_constraintTop_toBottomOf="@+id/linearLayout3"
+			app:layout_constraintVertical_bias="0.0">
+
+			<androidx.constraintlayout.widget.ConstraintLayout
+				android:id="@+id/current_location_container"
+				android:layout_width="match_parent"
+				android:layout_height="wrap_content"
+				android:background="?selectableItemBackground"
+				android:clickable="true"
+				android:focusable="true"
+				android:padding="5dp"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toTopOf="parent">
+
+				<ImageView
+					android:id="@+id/imageView2"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginStart="16dp"
+					android:layout_marginTop="27dp"
+					android:layout_marginBottom="27dp"
+					android:src="@drawable/dot_symbol"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toTopOf="parent" />
+
+				<TextView
+					android:id="@+id/textView5"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:fontFamily="@font/lexend_font"
+					android:text="Current Location"
+					android:textColor="@color/battleship_grey"
+					android:textSize="14sp"
+					app:layout_constraintBottom_toTopOf="@+id/current_location_address_textView"
+					app:layout_constraintStart_toStartOf="@+id/current_location_address_textView"
+					app:layout_constraintTop_toTopOf="parent" />
+
+				<TextView
+					android:id="@+id/current_location_address_textView"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginStart="16dp"
+					android:fontFamily="@font/lexend_font"
+					android:text="N/A"
+					android:textColor="@color/ebony_clay"
+					android:textSize="14sp"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintStart_toEndOf="@+id/imageView2"
+					app:layout_constraintTop_toBottomOf="@+id/textView5" />
+			</androidx.constraintlayout.widget.ConstraintLayout>
+
+			<View
+				android:id="@+id/view"
+				android:layout_width="0dp"
+				android:layout_height="0.5dp"
+				android:layout_marginStart="20dp"
+				android:layout_marginEnd="20dp"
+				android:background="@color/battleship_grey"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toBottomOf="@+id/current_location_container" />
+
+			<androidx.constraintlayout.widget.ConstraintLayout
+				android:id="@+id/destination_location_container"
+				android:layout_width="0dp"
+				android:layout_height="wrap_content"
+				android:background="?selectableItemBackground"
+				android:clickable="true"
+				android:focusable="true"
+				android:padding="5dp"
+				app:layout_constraintBottom_toBottomOf="parent"
+				app:layout_constraintEnd_toEndOf="parent"
+				app:layout_constraintStart_toStartOf="parent"
+				app:layout_constraintTop_toBottomOf="@id/current_location_container">
+
+				<ImageView
+					android:id="@+id/imageView3"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginStart="16dp"
+					android:layout_marginTop="27dp"
+					android:layout_marginBottom="27dp"
+					android:src="@drawable/dot_symbol"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintStart_toStartOf="parent"
+					app:layout_constraintTop_toTopOf="parent"
+					app:tint="@color/saffron_mango" />
+
+				<TextView
+					android:id="@+id/dstnTV"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:fontFamily="@font/lexend_font"
+					android:text="Destination"
+					android:textColor="@color/battleship_grey"
+					android:textSize="14sp"
+					app:layout_constraintBottom_toTopOf="@+id/destination_location_address_textView"
+					app:layout_constraintStart_toStartOf="@+id/destination_location_address_textView"
+					app:layout_constraintTop_toTopOf="parent" />
+
+				<TextView
+					android:id="@+id/destination_location_address_textView"
+					android:layout_width="wrap_content"
+					android:layout_height="wrap_content"
+					android:layout_marginStart="16dp"
+					android:fontFamily="@font/lexend_font"
+					android:text="N/A"
+					android:textColor="@color/ebony_clay"
+					android:textSize="14sp"
+					app:layout_constraintBottom_toBottomOf="parent"
+					app:layout_constraintStart_toEndOf="@+id/imageView3"
+					app:layout_constraintTop_toBottomOf="@+id/dstnTV" />
+			</androidx.constraintlayout.widget.ConstraintLayout>
+		</androidx.constraintlayout.widget.ConstraintLayout>
+
 		<androidx.appcompat.widget.AppCompatButton
 			android:id="@+id/confirmLocationButton"
 			android:layout_width="0dp"
-			android:layout_height="wrap_content"
-			android:layout_marginTop="0dp"
-			android:layout_marginBottom="0dp"
+			android:layout_height="40dp"
 			android:background="@drawable/regular_button_selector"
 			android:fontFamily="@font/lexend_font"
 			android:foreground="?selectableItemBackground"
-			android:text="confirm"
+			android:text="Create ride request"
 			android:textColor="@color/white"
-			android:textFontWeight="600"
+			android:textFontWeight="500"
+			android:textSize="12sp"
 			app:layout_constraintBottom_toBottomOf="parent"
 			app:layout_constraintEnd_toEndOf="parent"
-			app:layout_constraintStart_toStartOf="parent"
-			app:layout_constraintTop_toTopOf="parent" />
+			app:layout_constraintStart_toStartOf="parent" />
+
 	</androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
