Made it so when you click on an unused navigation item it won't navigate to home fragment. Driver dashboard now shows all available ride requests. Cleaned up the architecture a little bit.

--- a/app/src/main/res/layout/fragment_request_ride.xml
+++ b/app/src/main/res/layout/fragment_request_ride.xml
@@ -5,7 +5,7 @@
 	android:id="@+id/frameLayout3"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	tools:context=".ui.view.home.fragment.RequestRideFragment">
+	tools:context=".ui.home.fragment.RequestRideFragment">
 
 	<TextView
 		android:id="@+id/textView4"
