--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -14,7 +14,7 @@
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
-		tools:context=".ui.view.home.RequestRide.MapsActivity" />
+		tools:context=".ui.home.RequestRide.MapsActivity" />
 
 	<ImageButton
 		android:id="@+id/maps_back_button"
