--- a/app/src/main/res/layout/activity_request_ride.xml
+++ b/app/src/main/res/layout/activity_request_ride.xml
@@ -4,11 +4,11 @@
 	xmlns:tools="http://schemas.android.com/tools"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".ui.view.home.RequestRide.RequestRideActivity">
+	tools:context=".ui.home.RequestRide.RequestRideActivity">
 
 	<fragment
 		android:id="@+id/request_ride_map_fragment"
-		android:name="com.alidevs.traill.ui.view.home.fragment.RequestRideFragment"
+		android:name="com.alidevs.traill.ui.home.fragment.RequestRideFragment"
 		android:layout_width="0dp"
 		android:layout_height="0dp"
 		app:layout_constraintBottom_toBottomOf="parent"
