--- a/app/src/main/res/layout/fragment_driver_dashboard.xml
+++ b/app/src/main/res/layout/fragment_driver_dashboard.xml
@@ -2,17 +2,17 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
 	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
-	android:id="@+id/frameLayout4"
+	android:id="@+id/driver_dashboard_constraintLayout"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".ui.home.fragment.NearbyRidesFragment">
+	tools:context=".ui.driverDashboard.DriverDashboardFragment">
 
 	<TextView
-		android:id="@+id/textView4"
+		android:id="@+id/textView42"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:fontFamily="@font/lexend_font"
-		android:text="Nearby rides"
+		android:text="Ride Requests"
 		android:textAllCaps="true"
 		android:textColor="@color/battleship_grey"
 		android:textFontWeight="500"
@@ -22,7 +22,7 @@
 		app:layout_constraintTop_toTopOf="parent" />
 
 	<androidx.recyclerview.widget.RecyclerView
-		android:id="@+id/nearby_rides_recyclerView"
+		android:id="@+id/driver_dashboard_recyclerView"
 		android:layout_width="0dp"
 		android:layout_height="wrap_content"
 		android:layout_marginTop="10dp"
@@ -31,19 +31,18 @@
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@id/textView4"
+		app:layout_constraintTop_toBottomOf="@id/textView42"
 		app:layout_constraintVertical_bias="0.0" />
 
 	<ProgressBar
-		android:id="@+id/nearby_rides_progressBar"
+		android:id="@+id/driver_dashboard_progressBar"
 		style="?android:attr/progressBarStyle"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginTop="32dp"
 		android:indeterminateTint="@color/saffron_mango"
 		app:layout_constraintBottom_toBottomOf="parent"
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/textView4"
-		app:layout_constraintVertical_bias="0.0" />
+		app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
