--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,7 +6,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/white_smoke"
-	tools:context=".ui.view.home.fragment.HomeFragment">
+	tools:context=".ui.home.fragment.HomeFragment">
 
 	<androidx.core.widget.NestedScrollView
 		android:layout_width="match_parent"
@@ -21,13 +21,13 @@
 
 			<androidx.fragment.app.FragmentContainerView
 				android:id="@+id/fragmentContainerView"
-				android:name="com.alidevs.traill.ui.view.home.fragment.RequestRideFragment"
+				android:name="com.alidevs.traill.ui.home.fragment.RequestRideFragment"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content" />
 
 			<androidx.fragment.app.FragmentContainerView
 				android:id="@+id/fragmentContainerView2"
-				android:name="com.alidevs.traill.ui.view.home.fragment.NearbyRidesFragment"
+				android:name="com.alidevs.traill.ui.home.fragment.NearbyRidesFragment"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:layout_marginTop="20dp" />
