--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -6,7 +6,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/white"
-	tools:context=".ui.view.auth.fragment.LoginFragment">
+	tools:context=".ui.auth.fragment.LoginFragment">
 
 	<ImageView
 		android:id="@+id/imageView"
