--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto"
 	xmlns:tools="http://schemas.android.com/tools"
 	android:id="@+id/frameLayout2"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:background="@color/white_smoke"
-	tools:context=".ui.home.fragment.HomeFragment">
+	tools:context=".ui.home.HomeFragment">
 
 	<androidx.core.widget.NestedScrollView
 		android:layout_width="match_parent"
@@ -21,13 +20,13 @@
 
 			<androidx.fragment.app.FragmentContainerView
 				android:id="@+id/fragmentContainerView"
-				android:name="com.alidevs.traill.ui.home.fragment.RequestRideFragment"
+				android:name="com.alidevs.traill.ui.home.RequestRide.RequestRideFragment"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content" />
 
 			<androidx.fragment.app.FragmentContainerView
 				android:id="@+id/fragmentContainerView2"
-				android:name="com.alidevs.traill.ui.home.fragment.NearbyRidesFragment"
+				android:name="com.alidevs.traill.ui.home.NearbyRides.NearbyRidesFragment"
 				android:layout_width="match_parent"
 				android:layout_height="wrap_content"
 				android:layout_marginTop="20dp" />
