--- a/app/src/main/res/layout/fragment_nearby_rides.xml
+++ b/app/src/main/res/layout/fragment_nearby_rides.xml
@@ -5,7 +5,7 @@
 	android:id="@+id/frameLayout4"
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
-	tools:context=".ui.home.fragment.NearbyRidesFragment">
+	tools:context=".ui.home.NearbyRides.NearbyRidesFragment">
 
 	<TextView
 		android:id="@+id/textView4"
