--- a/app/src/main/res/layout/fragment_request_ride.xml
+++ b/app/src/main/res/layout/fragment_request_ride.xml
@@ -5,7 +5,7 @@
 	android:id="@+id/frameLayout3"
 	android:layout_width="match_parent"
 	android:layout_height="wrap_content"
-	tools:context=".ui.home.fragment.RequestRideFragment">
+	tools:context=".ui.home.RequestRide.RequestRideFragment">
 
 	<TextView
 		android:id="@+id/textView4"
