--- a/app/src/main/res/layout/fragment_nav_bar.xml
+++ b/app/src/main/res/layout/fragment_nav_bar.xml
@@ -39,4 +39,25 @@
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent"
 		tools:ignore="SpeakableTextPresentCheck" />
+
+	<ImageButton
+		android:id="@+id/nav_back_button"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="20dp"
+		android:background="@drawable/nav_menu_button_selector"
+		android:clickable="true"
+		android:elevation="3dp"
+		android:focusable="true"
+		android:foreground="?selectableItemBackground"
+		android:minWidth="34dp"
+		android:minHeight="34dp"
+		android:src="@drawable/ic_back_icon"
+		android:visibility="gone"
+		app:layout_constraintBottom_toBottomOf="parent"
+		app:layout_constraintEnd_toStartOf="@+id/nav_title"
+		app:layout_constraintHorizontal_bias="0.0"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="parent"
+		tools:ignore="SpeakableTextPresentCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
