Added settings tab and en/ar language support

--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -74,7 +74,7 @@
 				android:layout_weight="0.75"
 				android:fontFamily="@font/lexend_font"
 				android:gravity="center"
-				android:text="TextView"
+				android:text="@string/n_a"
 				android:textAlignment="center"
 				android:textColor="@color/battleship_grey"
 				android:textFontWeight="400"
@@ -102,7 +102,7 @@
 				android:layout_weight="0.75"
 				android:fontFamily="@font/lexend_font"
 				android:gravity="center"
-				android:text="TextView"
+				android:text="@string/n_a"
 				android:textAlignment="center"
 				android:textColor="@color/battleship_grey"
 				android:textFontWeight="400"
@@ -149,7 +149,7 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:fontFamily="@font/lexend_font"
-					android:text="Current Location"
+					android:text="@string/current_location"
 					android:textColor="@color/battleship_grey"
 					android:textFontWeight="500"
 					android:textSize="11sp"
@@ -163,7 +163,7 @@
 					android:layout_height="wrap_content"
 					android:layout_marginStart="16dp"
 					android:fontFamily="@font/lexend_font"
-					android:text="N/A"
+					android:text="@string/n_a"
 					android:textColor="@color/ebony_clay"
 					android:textSize="14sp"
 					app:layout_constraintBottom_toBottomOf="parent"
@@ -212,7 +212,7 @@
 					android:layout_width="wrap_content"
 					android:layout_height="wrap_content"
 					android:fontFamily="@font/lexend_font"
-					android:text="Destination"
+					android:text="@string/destination"
 					android:textColor="@color/battleship_grey"
 					android:textFontWeight="500"
 					android:textSize="11sp"
@@ -226,7 +226,7 @@
 					android:layout_height="wrap_content"
 					android:layout_marginStart="16dp"
 					android:fontFamily="@font/lexend_font"
-					android:text="N/A"
+					android:text="@string/n_a"
 					android:textColor="@color/ebony_clay"
 					android:textSize="14sp"
 					app:layout_constraintBottom_toBottomOf="parent"
@@ -242,7 +242,7 @@
 			android:background="@drawable/regular_button_selector"
 			android:fontFamily="@font/lexend_font"
 			android:foreground="?selectableItemBackground"
-			android:text="Create ride request"
+			android:text="@string/create_ride_request"
 			android:textColor="@color/white"
 			android:textFontWeight="500"
 			android:textSize="12sp"
