--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -24,7 +24,7 @@
 		android:layout_height="wrap_content"
 		android:layout_marginTop="16dp"
 		android:fontFamily="@font/lexend_font"
-		android:text="Log into your account"
+		android:text="@string/log_into_your_account"
 		android:textAllCaps="true"
 		android:textColor="@color/battleship_grey"
 		android:textFontWeight="400"
@@ -40,7 +40,7 @@
 		android:layout_marginStart="30dp"
 		android:layout_marginTop="136dp"
 		android:layout_marginEnd="30dp"
-		android:hint="Email Address"
+		android:hint="@string/email_address"
 		app:endIconDrawable="@drawable/ic_email_icon"
 		app:endIconMode="custom"
 		app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +62,7 @@
 		android:layout_marginStart="30dp"
 		android:layout_marginTop="16dp"
 		android:layout_marginEnd="30dp"
-		android:hint="Password"
+		android:hint="@string/password"
 		app:endIconDrawable="@drawable/ic_password_icon"
 		app:endIconMode="custom"
 		app:layout_constraintEnd_toEndOf="parent"
@@ -88,7 +88,7 @@
 		android:fontFamily="@font/lexend_font"
 		android:paddingStart="64dp"
 		android:paddingEnd="64dp"
-		android:text="Log in"
+		android:text="@string/login"
 		android:textAllCaps="true"
 		android:textColor="@color/black"
 		android:textFontWeight="500"
@@ -107,7 +107,7 @@
 		android:clickable="true"
 		android:focusable="true"
 		android:fontFamily="@font/lexend_font"
-		android:text="Register"
+		android:text="@string/register"
 		android:textAllCaps="true"
 		android:textColor="@color/ebony_clay"
 		android:textFontWeight="600"
@@ -126,7 +126,7 @@
 		android:clickable="true"
 		android:focusable="true"
 		android:fontFamily="@font/lexend_font"
-		android:text="Forgot password?"
+		android:text="@string/forgot_password"
 		android:textAllCaps="true"
 		android:textColor="@color/battleship_grey"
 		android:textFontWeight="400"
