--- a/app/src/main/res/layout/fragment_nearby_rides.xml
+++ b/app/src/main/res/layout/fragment_nearby_rides.xml
@@ -12,7 +12,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:fontFamily="@font/lexend_font"
-		android:text="Nearby rides"
+		android:text="@string/nearby_rides"
 		android:textAllCaps="true"
 		android:textColor="@color/battleship_grey"
 		android:textFontWeight="500"
