--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -24,7 +24,7 @@
 		android:layout_height="wrap_content"
 		android:layout_marginTop="16dp"
 		android:fontFamily="@font/lexend_font"
-		android:text="Create an account"
+		android:text="@string/create_an_account"
 		android:textAllCaps="true"
 		android:textColor="@color/battleship_grey"
 		android:textFontWeight="400"
@@ -40,7 +40,7 @@
 		android:layout_marginStart="30dp"
 		android:layout_marginTop="76dp"
 		android:layout_marginEnd="30dp"
-		android:hint="Full Name"
+		android:hint="@string/full_name"
 		app:endIconDrawable="@drawable/ic_user_name_icon"
 		app:endIconMode="custom"
 		app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +62,7 @@
 		android:layout_marginStart="30dp"
 		android:layout_marginTop="20dp"
 		android:layout_marginEnd="30dp"
-		android:hint="Email Address"
+		android:hint="@string/email_address"
 		app:endIconDrawable="@drawable/ic_email_icon"
 		app:endIconMode="custom"
 		app:layout_constraintEnd_toEndOf="parent"
@@ -84,7 +84,7 @@
 		android:layout_marginStart="30dp"
 		android:layout_marginTop="20dp"
 		android:layout_marginEnd="30dp"
-		android:hint="Password"
+		android:hint="@string/password"
 		app:endIconDrawable="@drawable/ic_password_icon"
 		app:endIconMode="custom"
 		app:layout_constraintEnd_toEndOf="parent"
@@ -109,7 +109,7 @@
 		android:elevation="2dp"
 		android:paddingStart="64dp"
 		android:paddingEnd="64dp"
-		android:text="Sign up"
+		android:text="@string/sign_up"
 		android:textColor="@color/black"
 		android:textFontWeight="500"
 		app:layout_constraintEnd_toEndOf="parent"
@@ -126,7 +126,7 @@
 		android:clickable="true"
 		android:focusable="true"
 		android:fontFamily="@font/lexend_font"
-		android:text="Login"
+		android:text="@string/login"
 		android:textAllCaps="true"
 		android:textColor="@color/ebony_clay"
 		android:textFontWeight="600"
@@ -135,38 +135,38 @@
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toBottomOf="@+id/singUpButton" />
 
-	<LinearLayout
-		android:layout_width="0dp"
-		android:layout_height="wrap_content"
-		android:layout_marginStart="30dp"
-		android:layout_marginTop="30dp"
-		android:layout_marginEnd="30dp"
-		android:orientation="horizontal"
-		app:layout_constraintEnd_toEndOf="parent"
-		app:layout_constraintStart_toStartOf="parent"
-		app:layout_constraintTop_toBottomOf="@+id/loginTextView">
+<!--	<LinearLayout-->
+<!--		android:layout_width="0dp"-->
+<!--		android:layout_height="wrap_content"-->
+<!--		android:layout_marginStart="30dp"-->
+<!--		android:layout_marginTop="30dp"-->
+<!--		android:layout_marginEnd="30dp"-->
+<!--		android:orientation="horizontal"-->
+<!--		app:layout_constraintEnd_toEndOf="parent"-->
+<!--		app:layout_constraintStart_toStartOf="parent"-->
+<!--		app:layout_constraintTop_toBottomOf="@+id/loginTextView">-->
 
-		<View
-			style="@style/HorizontalLine"
-			android:layout_gravity="center"
-			android:layout_weight="1" />
+<!--		<View-->
+<!--			style="@style/HorizontalLine"-->
+<!--			android:layout_gravity="center"-->
+<!--			android:layout_weight="1" />-->
 
-		<TextView
-			android:id="@+id/textView2"
-			android:layout_width="match_parent"
-			android:layout_height="wrap_content"
-			android:layout_weight="1"
-			android:fontFamily="@font/lexend_font"
-			android:textFontWeight="400"
-			android:textSize="12sp"
-			android:gravity="center"
-			android:text="OR"
-			android:textColor="@color/battleship_grey" />
+<!--		<TextView-->
+<!--			android:id="@+id/textView2"-->
+<!--			android:layout_width="match_parent"-->
+<!--			android:layout_height="wrap_content"-->
+<!--			android:layout_weight="1"-->
+<!--			android:fontFamily="@font/lexend_font"-->
+<!--			android:textFontWeight="400"-->
+<!--			android:textSize="12sp"-->
+<!--			android:gravity="center"-->
+<!--			android:text="OR"-->
+<!--			android:textColor="@color/battleship_grey" />-->
 
-		<View
-			style="@style/HorizontalLine"
-			android:layout_gravity="center"
-			android:layout_weight="1" />
-	</LinearLayout>
+<!--		<View-->
+<!--			style="@style/HorizontalLine"-->
+<!--			android:layout_gravity="center"-->
+<!--			android:layout_weight="1" />-->
+<!--	</LinearLayout>-->
 
 </androidx.constraintlayout.widget.ConstraintLayout>
