--- a/app/src/main/res/layout/fragment_request_ride.xml
+++ b/app/src/main/res/layout/fragment_request_ride.xml
@@ -12,7 +12,7 @@
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
 		android:fontFamily="@font/lexend_font"
-		android:text="Request ride"
+		android:text="@string/request_ride"
 		android:textAllCaps="true"
 		android:textColor="@color/battleship_grey"
 		android:textFontWeight="500"
@@ -64,7 +64,7 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:fontFamily="@font/lexend_font"
-				android:text="Current Location"
+				android:text="@string/current_location"
 				android:textColor="@color/battleship_grey"
 				android:textSize="14sp"
 				app:layout_constraintBottom_toTopOf="@+id/current_location_address_textView"
@@ -77,7 +77,7 @@
 				android:layout_height="wrap_content"
 				android:layout_marginStart="16dp"
 				android:fontFamily="@font/lexend_font"
-				android:text="N/A"
+				android:text="@string/n_a"
 				android:textColor="@color/ebony_clay"
 				android:textSize="14sp"
 				app:layout_constraintBottom_toBottomOf="parent"
@@ -127,7 +127,7 @@
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"
 				android:fontFamily="@font/lexend_font"
-				android:text="Destination"
+				android:text="@string/destination"
 				android:textColor="@color/battleship_grey"
 				android:textSize="14sp"
 				app:layout_constraintBottom_toTopOf="@+id/destination_location_address_textView"
@@ -140,7 +140,7 @@
 				android:layout_height="wrap_content"
 				android:layout_marginStart="16dp"
 				android:fontFamily="@font/lexend_font"
-				android:text="N/A"
+				android:text="@string/n_a"
 				android:textColor="@color/ebony_clay"
 				android:textSize="14sp"
 				app:layout_constraintBottom_toBottomOf="parent"
