--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -5,30 +5,27 @@
 			android:id="@+id/menu_home_item"
 			android:checked="true"
 			android:icon="@drawable/ic_home_icon"
-			android:title="Home" />
-		<item
-			android:id="@+id/menu_profile_item"
-			android:icon="@drawable/ic_profile_icon"
-			android:title="Profile" />
-		<item
-			android:id="@+id/map_view_item"
-			android:icon="@drawable/ic_map_icon"
-			android:title="Map" />
+			android:title="@string/home" />
 	</group>
 
-	<item android:title="Driver">
+	<group android:checkableBehavior="single">
+		<item
+			android:id="@+id/driver_dashboard_item"
+			android:icon="@drawable/ic_driver_icon"
+			android:title="@string/driver_dashboard" />
+		<item
+			android:id="@+id/cars_item"
+			android:icon="@drawable/ic_cars_garage"
+			android:title="@string/my_cars" />
+	</group>
+
+	<item android:title="@string/more">
 		<menu>
 			<group android:checkableBehavior="single">
 				<item
-					android:id="@+id/driver_dashboard_item"
-					android:icon="@drawable/ic_driver_icon"
-					android:title="Driver Dashboard" />
-				<item
-					android:id="@+id/menu_item_5"
-					android:title="Second sub" />
-				<item
-					android:id="@+id/menu_item_6"
-					android:title="Third sub" />
+					android:id="@+id/settings_item"
+					android:icon="@drawable/ic_settings"
+					android:title="@string/settings" />
 			</group>
 		</menu>
 	</item>
