--- a/app/src/main/res/layout/fragment_nav_bar.xml
+++ b/app/src/main/res/layout/fragment_nav_bar.xml
@@ -24,10 +24,10 @@
 		android:id="@+id/nav_hamburger_menu_button"
 		android:layout_width="wrap_content"
 		android:layout_height="wrap_content"
-		android:layout_marginStart="20dp"
+		android:layout_margin="20dp"
 		android:background="@drawable/nav_menu_button_selector"
 		android:clickable="true"
-		android:elevation="3dp"
+		android:elevation="10dp"
 		android:focusable="true"
 		android:foreground="?selectableItemBackground"
 		android:minWidth="34dp"
